@@ -1,3 +1,7 @@
+2014-10-06 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Completata la funzione di ricerca all'interno del database delle varie attivita'.
+
 2014-10-02 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Iniziato lo sviluppo sul widget della tabella per mostrare le varie attività.
